Bug 162829 - CRASH: Editing Formula Bar with two views
Summary: CRASH: Editing Formula Bar with two views
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: high major
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.2.0 target:24.8.1 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-09-06 20:38 UTC by Xisco Faulí
Modified: 2025-02-14 08:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["SfxShell::GetViewShell()"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-09-06 20:38:06 UTC
Steps to reproduce:
1. Open Calc
2. Windows - New Window
3. On view 2 click on Function Wizard
4. On view 1 click on the formula bar and add some text

-> Crash

Reproduced in

Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19042); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-09-06 20:40:03 UTC
Regression introduced by:

commit 1de1c47471278db2344c986e9d597d6a05e559e9	[log]
author	Gökay Şatır <gokaysatir@gmail.com>	Thu Feb 22 13:54:06 2024 +0300
committer	Miklos Vajna <vmiklos@collabora.com>	Thu Mar 21 16:32:09 2024 +0100
tree 14494bf30d8bac21fe058b98030c69df2db688c3
parent 9adcf67c9b164d019eebe45279bcaa91b0ce471a [diff]

Moving parts of readonly checks from model to view.

Bisected with: bibisect-linux64-24.8
Comment 2 Commit Notification 2024-09-07 10:26:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f42932f23c20122cb7b4537efaf943a8b481752e

tdf#162829: Dereference before null check

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-09-09 09:52:25 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/0eacd430677f62a5ecd6184d792b5308a900c66d

tdf#162829: Dereference before null check

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-09 11:06:58 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8cf879e55a36c47aacf6fd498600629a49df3b06

tdf#162829: Dereference before null check

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gene Watts 2024-12-30 07:50:51 UTC
(In reply to Commit Notification from comment #4)
> Xisco Fauli committed a patch related to this issue.
> It has been pushed to "libreoffice-24-8":
> 
> https://git.libreoffice.org/core/commit/
> 8cf879e55a36c47aacf6fd498600629a49df3b06 https://geometrylite.io

> 
> tdf#162829: Dereference before null check
> 
> It will be available in 24.8.2.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Thank you for your support.
Comment 6 Anthony325 2025-02-14 08:27:33 UTC Comment hidden (spam)