tdf#162829: Dereference before null check

Regression from:
commit 1de1c47471278db2344c986e9d597d6a05e559e9
Author: Gökay Şatır <gokaysatir@gmail.com>
Date:   Thu Feb 22 13:54:06 2024 +0300

    Moving parts of readonly checks from model to view.

Change-Id: I8d0ba914df909bc1a13ce7181b6d05cd0216e468
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172978
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>